@@ -371,6 +371,8 @@ class TaskRefinerBase (object):
                     datasetSpec.setDatasetAttribute(tmpItem['attributes'])
                 if tmpItem.has_key('ratio'):
                     datasetSpec.setDatasetAttribute('ratio={0}'.format(tmpItem['ratio']))
+                if tmpItem.has_key('eventRatio'):
+                    datasetSpec.setEventRatio(tmpItem['eventRatio'])
                 if tmpItem.has_key('check'):
                     datasetSpec.setDatasetAttribute('cc')
                 if tmpItem.has_key('usedup'):
